FTR: Adjust titles to match nav

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </p>
                 <div class="hero-buttons">
                     <a onmouseover="selectSound()" class="cta-button" href="./game.html" style="color: white">Quick Game 🐇</a>
-                    <a onmouseover="selectSound()" onclick="scrollEffect()" class="cta-button" href="#difficulty-section">Choose Difficulty 🎭</a>
+                    <a onmouseover="selectSound()" onclick="scrollEffect()" class="cta-button" href="#difficulty-section">Difficulty 🎭</a>
                     <a onmouseover="selectSound()" onclick="scrollEffect()" class="cta-button" href="#instructions-section">How To Play 📜</a>
                 </div>
                 
@@ -67,7 +67,7 @@
 
         <section class="content-wrapper" id="difficulty-section">
             <div class="container-wrapper">
-                <h1>Game Difficulty 🎭</h1>
+                <h1>Difficulty 🎭</h1>
             <p>
                 Sharpen your memory and put your skills to the test. Choose from 3 levels of difficulty to get started:
             </p>
