--- a/settings.html
+++ b/settings.html
@@ -14,21 +14,19 @@
         <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
         <nav>
             <ul>
-                <li><a onmouseenter="clickSound()" href="./index.html">Home</a></li>
+                <li><a href="./game.html" style="color: white">Quick Game</a></li>
                 <li><a onmouseenter="clickSound()" onclick="scrollEffect()" href="./index.html#instructions-section">How To Play</a></li>
                 <li><a onmouseenter="clickSound()" onclick="scrollEffect()" href="./index.html#difficulty-section">Difficulty</a></li>
                 <li><a onmouseenter="clickSound()" href="./leaderboards.html">Leaderboard</a></li>
-                <li><a href="./settings.html" style="color: white">Settings</a></li>
             </ul>
             <audio src=""></audio>
         </nav>
     </header>
 
     <section class="content-wrapper settings-section">
-        <audio id="bg_audio" src="./Resources/Audio/main.mp3" autoplay loop></audio>
         <div class="container-wrapper">
             <!-- Settings Header -->
-            <h1>Game Settings <span class="section-icon">🔧</span></h1>
+            <h1>Settings <span class="section-icon">🔧</span></h1>
             <p>Here you can customize your experience through the game settings.</strong><br><br>Adjust the <strong style="color: #9500ff;">Game Speed</strong> to match your skill level. Faster speeds will increase your score multiplier!</p>
             <p class="tip-text">Tip:<i> Faster speeds increase score multiplier!</i></p>
 
