FTR: Update socials

--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@
         
         <footer>
             <div class="social-icons">
-                <a href="https://www.facebook.com" target="_blank" rel="noopener"><img src="./Resources/Icons/facebook.svg" alt="Facebook"></a>
-                <a href="https://www.twitter.com" target="_blank" rel="noopener"><img src="./Resources/Icons/x-social.svg" alt="Twitter"></a>
-                <a href="https://www.instagram.com" target="_blank" rel="noopener"><img src="./Resources/Icons/instagram.svg" alt="Instagram"></a>
+                <a href="https://www.facebook.com/profile.php?id=61570549830925" target="_blank" rel="noopener"><img src="./Resources/Icons/facebook.svg" alt="Facebook">.</a>
+                <a href="https://x.com/TylerRTDev" target="_blank" rel="noopener"><img src="./Resources/Icons/x-social.svg" alt="Twitter"></a>
+                <a href="https://www.instagram.com/tylerrtdev/" target="_blank" rel="noopener"><img src="./Resources/Icons/instagram.svg" alt="Instagram"></a>
                 <a href="https://www.youtube.com" target="_blank" rel="noopener"><img src="./Resources/Icons/youtube.svg" alt="YouTube"></a>
-                <a href="https://www.snapchat.com" target="_blank" rel="noopener"><img src="./Resources/Icons/snapchat.svg" alt="Snapchat"></a>
-                <a href="https://www.tiktok.com" target="_blank" rel="noopener"><img src="./Resources/Icons/tik-tok.svg" alt="Tik Tok"></a>
+                <a href="https://github.com/TylerRTDev" target="_blank" rel="noopener"><img src="./Resources/Icons/github-svgrepo-com.svg" alt="Git-Hub"></a>
             </div>
         </footer>
     </body>
