--- a/settings.html
+++ b/settings.html
@@ -39,7 +39,7 @@
 
             <!-- Save Button -->
             <button onmouseover="caution()" class="reset-button" id="save-settings" style="color: white">Save Settings 💾</button>
-            <a onmouseover="selectSound()" href="./game.html" class="settings-button">Back to Game 🔙</a>
+            <a onmouseover="selectSound()" href="./settings.html?from=game" class="settings-button">Back to Game 🔙</a>
         </div>
     </section>
 
