FIX/FTR: Update favicon and logo appearence: Continutation of previous FIX

--- a/game.html
+++ b/game.html
@@ -8,11 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./Styles/styles.css">
         <link rel="stylesheet" href="./Styles/media-queries.css">
+        <link rel="icon" type="image/x-icon" href="./Resources/Icons/favicon.ico">
         <style>
-            select {
-                
-            }
-
         </style>
     </head>
     <body>
@@ -22,7 +19,7 @@
         </div>
 
         <header>
-            <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
+            <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
                     <li><a onmouseenter="clickSound()" href="./index.html">Home</a></li>
