--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Memory Game</title>
+        <title>Do You Remember... ❔</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./Styles/styles.css">
         <link rel="stylesheet" href="./Styles/media-queries.css">
+        <link rel="icon" type="image/x-icon" href="./Resources/Icons/favicon.ico">
         <style></style>
     </head>
     <body>
@@ -16,7 +17,7 @@
         </div>
 
         <header>
-            <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
+            <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
                     <li><a onmouseenter="clickSound()" href="#title-section" style="color: white">Home</a></li>
