--- a/settings.html
+++ b/settings.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Game Settings</title>
+        <title>Settings</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./Styles/styles.css">
         <link rel="stylesheet" href="./Styles/media-queries.css">
+        <link rel="icon" type="image/x-icon" href="./Resources/Icons/favicon.ico">
     </head>
 <body>
     <header>
-        <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" width="40" height="40" alt="site-logo"></a>
+        <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
         <nav>
             <ul>
                 <li><a href="./game.html" style="color: white">Quick Game</a></li>
