FIX: Adressed browser console errors

--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
             <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
-                    <li><a onmouseenter="clickSound()" href="./index.html">Home</a></li>
+                    <li><a onmouseenter="clickSound()" href="./index.html#instructions-section">Home</a></li>
                     <li><a onmouseenter="clickSound()" href="./index.html#instructions-section">How To Play</a></li>
                     <li><a onmouseenter="clickSound()" href="./index.html#difficulty-section">Difficulty</a></li>
                     <li><a onmouseenter="clickSound()" href="./leaderboards.html">Leaderboard</a></li>
@@ -41,7 +41,7 @@
                     </select>
                 </h2>
                 <h1>Level: 1</h1>
-                <a onmouseover="settingsSound()" href="./settings.html" class="cta-game-button" id="game-settings">Game Settings 🔧</a>
+                <a onmouseover="settingsSound()" href="./settings.html" class="settings-button" id="game-settings">Settings 🔧</a>
             </div>
 
             <div class="game-container">
