--- a/leaderboards.html
+++ b/leaderboards.html
@@ -17,10 +17,9 @@
         <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
         <nav>
             <ul>
-                <li><a onmouseenter="clickSound()" href="./index.html">Home</a></li>
+                <li><a href="./game.html" style="color: white">Quick Game</a></li>
                 <li><a onmouseenter="clickSound()" href="./index.html#instructions-section">How To Play</a></li>
                 <li><a onmouseenter="clickSound()" href="./index.html#difficulty-section">Difficulty</a></li>
-                <li><a href="./leaderboards.html" style="color: white">Leaderboard</a></li>
                 <li><a onmouseenter="clickSound()" href="./settings.html">Settings</a></li>
             </ul>
         </nav>
