--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
-                    <li><a onmouseenter="clickSound()" href="#title-section" style="color: white">Home</a></li>
+                    <li><a onmouseenter="clickSound()" onclick="scrollEffect()" href="#title-section" style="color: white">Home</a></li>
                     <li><a onmouseenter="clickSound()" href="./leaderboards.html">Leaderboard</a></li>
                     <li><a onmouseenter="clickSound()" href="./settings.html">Settings</a></li>
                 </ul>
