--- a/settings.html
+++ b/settings.html
@@ -40,7 +40,7 @@
 
             <!-- Save Button -->
             <button onmouseover="caution()" class="reset-button" id="save-settings" style="color: white">Save Settings 💾</button>
-            <a onmouseover="selectSound()" href="/game.html" class="settings-button">Back to Game 🔙</a>
+            <a onmouseover="selectSound()" href="/game.html" class="settings-back-button">Back to Game 🔙</a>
         </div>
     </section>
 
