--- a/game.html
+++ b/game.html
@@ -26,7 +26,6 @@
                     <li><a onmouseenter="clickSound()" href="./index.html#instructions-section">How To Play</a></li>
                     <li><a onmouseenter="clickSound()" href="./index.html#difficulty-section">Difficulty</a></li>
                     <li><a onmouseenter="clickSound()" href="./leaderboards.html">Leaderboard</a></li>
-                    <li><a onmouseenter="clickSound()" href="./settings.html">Settings</a></li>
                 </ul>
             </nav>
         </header>
@@ -41,7 +40,7 @@
                     </select>
                 </h2>
                 <h1>Level: 1</h1>
-                <a onmouseover="settingsSound()" href="./settings.html" class="settings-button" id="game-settings">Settings 🔧</a>
+                <a onmouseover="settingsSound()" href="./settings.html?from=game" class="settings-button" id="game-settings">Settings 🔧</a>
             </div>
 
             <div class="game-container">
