--- a/index.html
+++ b/index.html
@@ -103,4 +103,5 @@
     </body>
     <script src="./Scripts/script.js"></script>
     <script src="./Scripts/gameSound.js"></script>
+    <script src="./Scripts/queryString.js"></script>
 </html>
