Fix: Added testing file - updated js files based on JSlint, screenshots added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Do You Remember... ❔</title>
-        <meta name="description" content="">
+        <meta name="keywords" content="memory game, brain training, pattern recall, interactive memory challenge, memory skill improvement, fun brain game, cognitive training, leaderboard competition, TylerRTDev">
+        <meta name="description" content="Test and improve your memory skills with Do You Remember? - A fun, interactive pattern recall game with dynamic difficulty levels and a competitive leaderboard.">
+        <meta name="author" content="Tyler Kerr">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Do You Remember... ❔</title>
         <link rel="stylesheet" href="./Styles/styles.css">
         <link rel="stylesheet" href="./Styles/media-queries.css">
         <link rel="icon" type="image/x-icon" href="./Resources/Icons/favicon.ico">
