Clean up: File paths cases adjusted

--- a/game.html
+++ b/game.html
@@ -3,23 +3,26 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="keywords" content="memory game, brain training, pattern recall, interactive memory challenge, memory skill improvement, fun brain game, cognitive training, leaderboard competition, TylerRTDev">
+        <meta name="description" content="Test and improve your memory skills with Do You Remember? - A fun, interactive pattern recall game with dynamic difficulty levels and a competitive leaderboard.">
+        <meta name="author" content="Tyler Kerr">
         <title>Memory Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./Styles/styles.css">
-        <link rel="stylesheet" href="./Styles/media-queries.css">
-        <link rel="icon" type="image/x-icon" href="./Resources/Icons/favicon.ico">
+        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="./styles/media-queries.css">
+        <link rel="icon" type="image/x-icon" href="./resources/icons/favicon.ico">
         <style>
         </style>
     </head>
     <body>
         <div class="global-overlay">
             <div class="shadow-overlay"></div>
-            <img class="content-overlay" src="./Resources/pexels-felixmittermeier-957061.jpg" alt="">
+            <img class="content-overlay" src="./resources/pexels-felixmittermeier-957061.jpg" alt="">
         </div>
 
         <header>
-            <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
+            <a class="website-logo-header" href="index.html"><img src="./resources/icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
                     <li><a onmouseenter="clickSound()" href="./index.html#instructions-section">Home</a></li>
@@ -92,16 +95,16 @@
             
         <footer>
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=61570549830925" target="_blank" rel="noopener"><img src="./Resources/Icons/facebook.svg" alt="Facebook">.</a>
-                <a href="https://x.com/TylerRTDev" target="_blank" rel="noopener"><img src="./Resources/Icons/x-social.svg" alt="Twitter"></a>
-                <a href="https://www.instagram.com/tylerrtdev/" target="_blank" rel="noopener"><img src="./Resources/Icons/instagram.svg" alt="Instagram"></a>
-                <a href="https://www.youtube.com" target="_blank" rel="noopener"><img src="./Resources/Icons/youtube.svg" alt="YouTube"></a>
-                <a href="https://github.com/TylerRTDev" target="_blank" rel="noopener"><img src="./Resources/Icons/github-svgrepo-com.svg" alt="Git-Hub"></a>
+                <a href="https://www.facebook.com/profile.php?id=61570549830925" target="_blank" rel="noopener"><img src="./resources/icons/facebook.svg" alt="Facebook">.</a>
+                <a href="https://x.com/TylerRTDev" target="_blank" rel="noopener"><img src="./resources/icons/x-social.svg" alt="Twitter"></a>
+                <a href="https://www.instagram.com/tylerrtdev/" target="_blank" rel="noopener"><img src="./resources/icons/instagram.svg" alt="Instagram"></a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener"><img src="./resources/icons/youtube.svg" alt="YouTube"></a>
+                <a href="https://github.com/TylerRTDev" target="_blank" rel="noopener"><img src="./resources/icons/github-svgrepo-com.svg" alt="Git-Hub"></a>
             </div>
         </footer>
-        <script src="./Scripts/script.js"></script>
-        <script src="./Scripts/queryString.js"></script>
-        <script src="./Scripts/difficulty-select.js"></script>
-        <script src="./Scripts/gameSound.js"></script>
+        <script src="./scripts/script.js"></script>
+        <script src="./scripts/queryString.js"></script>
+        <script src="./scripts/difficulty-select.js"></script>
+        <script src="./scripts/gameSound.js"></script>
     </body>
 </html>
