--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <meta name="author" content="Tyler Kerr">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Do You Remember... ❔</title>
-        <link rel="stylesheet" href="./Styles/styles.css">
-        <link rel="stylesheet" href="./Styles/media-queries.css">
-        <link rel="icon" type="image/x-icon" href="./Resources/Icons/favicon.ico">
+        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="./styles/media-queries.css">
+        <link rel="icon" type="image/x-icon" href="./resources/icons/favicon.ico">
     </head>
     <body>
         <div class="global-overlay">
@@ -18,7 +18,7 @@
         </div>
 
         <header>
-            <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
+            <a class="website-logo-header" href="index.html"><img src="./resources/icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
                     <li><a onmouseenter="clickSound()" onclick="scrollEffect()" href="#title-section" style="color: white">Home</a></li>
@@ -29,12 +29,12 @@
         </header>
 
         <div>
-            <img class="bg-image" src="./Resources/pexels-felixmittermeier-957061.jpg" alt="background image">
+            <img class="bg-image" src="./resources/pexels-felixmittermeier-957061.jpg" alt="background image">
         </div>
 
         <section class="content-wrapper-home" id="title-section">
             <div class="container-wrapper-home">
-                <img src="./Resources/Icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" alt="site-logo">
+                <img src="./resources/icons/human-head-with-a-question-mark-inside-svgrepo-com.svg" alt="site-logo">
                 <h1>Do You Remember... ❔</h1>
                 <p>
                     The most challenging memory game, let’s see if you have what it takes to remember...
@@ -94,15 +94,15 @@
         
         <footer>
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=61570549830925" target="_blank" rel="noopener"><img src="./Resources/Icons/facebook.svg" alt="Facebook">.</a>
-                <a href="https://x.com/TylerRTDev" target="_blank" rel="noopener"><img src="./Resources/Icons/x-social.svg" alt="Twitter"></a>
-                <a href="https://www.instagram.com/tylerrtdev/" target="_blank" rel="noopener"><img src="./Resources/Icons/instagram.svg" alt="Instagram"></a>
-                <a href="https://www.youtube.com" target="_blank" rel="noopener"><img src="./Resources/Icons/youtube.svg" alt="YouTube"></a>
-                <a href="https://github.com/TylerRTDev" target="_blank" rel="noopener"><img src="./Resources/Icons/github-svgrepo-com.svg" alt="Git-Hub"></a>
+                <a href="https://www.facebook.com/profile.php?id=61570549830925" target="_blank" rel="noopener"><img src="./resources/icons/facebook.svg" alt="Facebook">.</a>
+                <a href="https://x.com/TylerRTDev" target="_blank" rel="noopener"><img src="./resources/icons/x-social.svg" alt="Twitter"></a>
+                <a href="https://www.instagram.com/tylerrtdev/" target="_blank" rel="noopener"><img src="./resources/icons/instagram.svg" alt="Instagram"></a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener"><img src="./resources/icons/youtube.svg" alt="YouTube"></a>
+                <a href="https://github.com/TylerRTDev" target="_blank" rel="noopener"><img src="./resources/icons/github-svgrepo-com.svg" alt="Git-Hub"></a>
             </div>
         </footer>
-        <script src="./Scripts/script.js"></script>
-        <script src="./Scripts/gameSound.js"></script>
-        <script src="./Scripts/queryString.js"></script>
+        <script src="./scripts/script.js"></script>
+        <script src="./scripts/gameSound.js"></script>
+        <script src="./scripts/queryString.js"></script>
     </body>
 </html>
