--- a/settings.html
+++ b/settings.html
@@ -3,16 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="keywords" content="memory game, brain training, pattern recall, interactive memory challenge, memory skill improvement, fun brain game, cognitive training, leaderboard competition, TylerRTDev">
+        <meta name="description" content="Test and improve your memory skills with Do You Remember? - A fun, interactive pattern recall game with dynamic difficulty levels and a competitive leaderboard.">
+        <meta name="author" content="Tyler Kerr">
         <title>Settings</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./Styles/styles.css">
-        <link rel="stylesheet" href="./Styles/media-queries.css">
-        <link rel="icon" type="image/x-icon" href="./Resources/Icons/favicon.ico">
+        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="./styles/media-queries.css">
+        <link rel="icon" type="image/x-icon" href="./resources/icons/favicon.ico">
     </head>
     <body>
         <header>
-            <a class="website-logo-header" href="index.html"><img src="./Resources/Icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
+            <a class="website-logo-header" href="index.html"><img src="./resources/icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
             <nav>
                 <ul>
                     <li><a href="./game.html" style="color: white">Quick Game</a></li>
@@ -45,15 +48,15 @@
 
         <footer>
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=61570549830925" target="_blank" rel="noopener"><img src="./Resources/Icons/facebook.svg" alt="Facebook">.</a>
-                <a href="https://x.com/TylerRTDev" target="_blank" rel="noopener"><img src="./Resources/Icons/x-social.svg" alt="Twitter"></a>
-                <a href="https://www.instagram.com/tylerrtdev/" target="_blank" rel="noopener"><img src="./Resources/Icons/instagram.svg" alt="Instagram"></a>
-                <a href="https://www.youtube.com" target="_blank" rel="noopener"><img src="./Resources/Icons/youtube.svg" alt="YouTube"></a>
-                <a href="https://github.com/TylerRTDev" target="_blank" rel="noopener"><img src="./Resources/Icons/github-svgrepo-com.svg" alt="Git-Hub"></a>
+                <a href="https://www.facebook.com/profile.php?id=61570549830925" target="_blank" rel="noopener"><img src="./resources/icons/facebook.svg" alt="Facebook">.</a>
+                <a href="https://x.com/TylerRTDev" target="_blank" rel="noopener"><img src="./resources/icons/x-social.svg" alt="Twitter"></a>
+                <a href="https://www.instagram.com/tylerrtdev/" target="_blank" rel="noopener"><img src="./resources/icons/instagram.svg" alt="Instagram"></a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener"><img src="./resources/icons/youtube.svg" alt="YouTube"></a>
+                <a href="https://github.com/TylerRTDev" target="_blank" rel="noopener"><img src="./resources/icons/github-svgrepo-com.svg" alt="Git-Hub"></a>
             </div>
         </footer>
-        <script src="./Scripts/settings.js"></script>
-        <script src="./Scripts/gameSound.js"></script>
-        <script src="./Scripts/script.js"></script>
+        <script src="./scripts/settings.js"></script>
+        <script src="./scripts/gameSound.js"></script>
+        <script src="./scripts/script.js"></script>
     </body>
 </html>
