Fix: testing doc now has accessibility section for homepage and 404 page, table of contents for both markdowns updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <header>
-            <a class="website-logo-header" href="index.html"><img src="./resources/icons/header-logo-icon.svg" width="40" height="40" alt="site-logo"></a>
+            <a class="website-logo-header" href="index.html"><img src="./resources/icons/header-logo-icon.svg" width="40" height="40" alt="site-logo-header"></a>
             <nav>
                 <ul>
                     <li><a onmouseenter="clickSound()" onclick="scrollEffect()" href="#title-section" style="color: white">Home</a></li>
@@ -77,13 +77,13 @@
 
             <div class="difficulty-card-container">
                 <div class="difficulty-cards">
-                    <a onmouseenter="selectSound()" class="cta-button" href="./game.html?difficulty=Easy">Easy ⭐</a>
+                    <a onmouseenter="selectSound()" class="cta-button" href="./game.html?difficulty=easy">Easy ⭐</a>
                 </div>
                 <div class="difficulty-cards">
-                    <a onmouseover="selectSound()" class="cta-button" href="./game.html?difficulty=Medium">Medium 🏅</a>
+                    <a onmouseover="selectSound()" class="cta-button" href="./game.html?difficulty=medium">Medium 🏅</a>
                 </div>
                 <div class="difficulty-cards">
-                    <a onmouseover="selectSound()" class="cta-button" href="./game.html?difficulty=Hard">Hard 👑</a>
+                    <a onmouseover="selectSound()" class="cta-button" href="./game.html?difficulty=hard">Hard 👑</a>
                 </div>
             </div>
             <p id="challenge-text">Challenge yourself further and adjust the speed of the game in <a onmouseover="settingsSound()" class="in-text-link" href="./settings.html">settings</a>.</p>
